# bencoding

./: README.md  pyproject.toml
.github/workflows/: ci.yml
bencoding/: core.py
